--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   font-size: 12px;
-  background: black;
+  background: #202020;
 }
 
 #main {
@@ -11,8 +11,9 @@ body {
 #controls{
   font-size: 3em;
   background: white;
-  padding: 0.2em;
+  padding: 0.2em 0.2em 0em 0.2em;
   border-radius: 2px;
+  margin: 0 0 25px 0;
 }
 
 #pause{
@@ -23,27 +24,50 @@ body {
 
 .cam {
   float: left;
-/*  width: 352px;
-  min-height: 240px;*/
-  border-radius: 2px;
-  margin: 5px;
-  background: #C6C6C6;
+  margin: 10px;
+  box-shadow: 0 0 10px #000;
+  border-top: solid 1px rgba(255,255,255,0.2);
+  border-radius: 5px;
 }
 
 .cam img {
   /* 100% */
-  /*  width: 352px;
-    height: 240px;*/
+  width: 352px;
+  height: 240px;
 
   /* 75% */
   width: 264px;
   height: 180px;
 
-  background: gray;
+  /* 50% */
+/*  width: 176px;
+  height: 120px;*/
+
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .cam span {
   display: block;
   text-align: center;
-  padding: 0.25em;
+  padding: 0.55em;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  font-family: monospace;
+  font-size: 10px;
+
+  background: #d8d7d4; /* Old browsers */
+  background: -moz-linear-gradient(top, #d8d7d4 0%, #b8b8b8 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d8d7d4), color-stop(100%,#b8b8b8)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #d8d7d4 0%,#b8b8b8 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #d8d7d4 0%,#b8b8b8 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #d8d7d4 0%,#b8b8b8 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #d8d7d4 0%,#b8b8b8 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d8d7d4', endColorstr='#b8b8b8',GradientType=0 ); /* IE6-9 */
 }
+
+
+
+
+
+
