--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,21 +5,39 @@ body {
 }
 
 #main {
-  margin: 50px auto 50px auto;
+  margin: 25px auto 25px auto;
 }
 
 #controls{
-  font-size: 3em;
-  background: white;
-  padding: 0.2em 0.2em 0em 0.2em;
+  padding: 10px 10px 3px 10px;
   border-radius: 2px;
-  margin: 0 0 25px 0;
+  margin: 0 auto 25px auto;
+  width: 400px;
+
+  box-shadow: 0 0 10px #000;
+  background: #d8d7d4; /* Old browsers */
+  background: -moz-linear-gradient(top, #d8d7d4 0%, #b8b8b8 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d8d7d4), color-stop(100%,#b8b8b8)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #d8d7d4 0%,#b8b8b8 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #d8d7d4 0%,#b8b8b8 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #d8d7d4 0%,#b8b8b8 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #d8d7d4 0%,#b8b8b8 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d8d7d4', endColorstr='#b8b8b8',GradientType=0 ); /* IE6-9 */
 }
 
-#pause{
-  color: gray;
+#controls a {
+  line-height: 1em;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  color: #181818;
   display: block;
   text-decoration: none;
+  text-shadow: 0 0 2px rgba(0,0,0,0.8);
+}
+
+#controls a:hover {
+  text-shadow: 0 0 10px rgba(0,0,0,0.8);
 }
 
 .cam {
@@ -53,8 +71,9 @@ body {
   padding: 0.55em;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  font-family: monospace;
-  font-size: 10px;
+  font-family: sans-serif;
+  font-size: 12px;
+  text-shadow: 0 1px 1px #fff;
 
   background: #d8d7d4; /* Old browsers */
   background: -moz-linear-gradient(top, #d8d7d4 0%, #b8b8b8 100%); /* FF3.6+ */
