--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,14 +5,14 @@ body {
 }
 
 #main {
-  margin: 25px auto 25px auto;
+  margin: 25px 20px 25px 40px;
 }
 
 #controls{
   padding: 10px 10px 3px 10px;
   border-radius: 2px;
   margin: 0 auto 25px auto;
-  width: 400px;
+  width: 24px;
 
   box-shadow: 0 0 10px #000;
   background: #d8d7d4; /* Old browsers */
@@ -42,7 +42,7 @@ body {
 
 .cam {
   float: left;
-  margin: 10px;
+  margin: 5px;
   box-shadow: 0 0 10px #000;
   border-top: solid 1px rgba(255,255,255,0.2);
   border-radius: 5px;
