--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,10 @@ body {
   background: #202020;
 }
 
+.clear {
+  clear: both;
+}
+
 #main {
   margin: 25px 20px 25px 40px;
 }
@@ -12,7 +16,7 @@ body {
   padding: 10px 10px 3px 10px;
   border-radius: 2px;
   margin: 0 auto 25px auto;
-  width: 24px;
+  width: 200px;
 
   box-shadow: 0 0 10px #000;
   background: #d8d7d4; /* Old browsers */
@@ -26,15 +30,25 @@ body {
 }
 
 #controls a {
+  float: left;
   line-height: 1em;
   font-size: 30px;
-  width: 30px;
+  margin-right: 1em;
+/*  width: 30px;*/
   height: 30px;
   color: #181818;
   display: block;
   text-decoration: none;
   text-shadow: 0 0 2px rgba(0,0,0,0.8);
 }
+
+#controls select {
+  float: left;
+}
+
+option {
+  font-size: 40px;
+  }
 
 #controls a:hover {
   text-shadow: 0 0 10px rgba(0,0,0,0.8);
