--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: sans-serif;
   font-size: 12px;
   background: #202020;
+  margin: 0;
+  padding: 0;
 }
 
 .clear {
@@ -9,14 +11,13 @@ body {
 }
 
 #main {
-  margin: 25px 20px 25px 40px;
+  margin: 0 20px 25px 20px;
+  padding: 0;
 }
 
-#controls{
-  padding: 10px 10px 3px 10px;
-  border-radius: 2px;
-  margin: 0 auto 25px auto;
-  width: 600px;
+#controls {
+  padding: 10px 25px 3px 25px;
+  margin: 0 0 25px 0;
 
   box-shadow: 0 0 10px #000;
   background: #d8d7d4; /* Old browsers */
@@ -39,7 +40,8 @@ body {
   color: #181818;
   display: block;
   text-decoration: none;
-  text-shadow: 0 0 2px rgba(0,0,0,0.8);
+/*  text-shadow: 0 0 2px rgba(0,0,0,0.8);*/
+  text-align: center;
 }
 
 #controls select,
@@ -64,18 +66,6 @@ body {
 }
 
 .cam img {
-  /* 100% */
-  width: 352px;
-  height: 240px;
-
-  /* 75% */
-  width: 264px;
-  height: 180px;
-
-  /* 50% */
-/*  width: 176px;
-  height: 120px;*/
-
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
 }
